--- a/index.html
+++ b/index.html
@@ -35,6 +35,33 @@
             </div>
         </div>
     </nav>
+    <section>
+        <div class="banner-container">
+            <div class="banner-text">
+             <h3>
+                Play Like The
+             </h3>
+             <h1>G.O.A.T.</h1>
+             <div class="para">
+                <p>1-Click instant play</p>
+             <p>No Download</p>
+             <p>1000s of supported online games</p>
+             </div>
+             <div class="button-container">
+                <div class="button-1">
+                    <button class="btn-1">SIGN IN</button>
+                </div>
+                <div class="button-2">
+                    <button class="btn-2">GO ROGUE</button>
+                </div>
+             </div>
+            </div>
+            <div class="section-img">
+                   <img src="./images/Group 18.png" alt="">
+            </div>
+
+        </div>
+    </section>
     </header>
     <main>
 
