--- a/index.html
+++ b/index.html
@@ -64,7 +64,36 @@
     </section>
     </header>
     <main>
-
+<section>
+    <div class="online-games-container">
+       <div class="online-games-text">
+        <h3>Online Games <span class="liner">Funny Videos</span></h3>
+        <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+       </div>
+        <div class="online-games-image">
+            <div class="online">
+                <img src="./images/Rectangle 4.png" alt="">
+                <p>No Download. No Installs. Play<br> 
+                    games Instantly on Gamer.</p>
+            </div>
+            <div class="online">
+                <img src="./images/Rectangle 5.png" alt="">
+                <p>Did you score? #unblockedgames<br> 
+                    #school</p>
+            </div>
+            <div class="online">
+                <img src="./images/Rectangle 7.png" alt="">
+                <p>Breaking game records<br> 
+                    like OG</p>
+            </div>
+            <div class="online">
+                <img src="./images/Rectangle 6.png" alt="">
+                <p>Busted gaming on school laptop,<br> 
+                    but you are still lit</p>
+            </div>
+        </div>
+    </div>
+</section>
     </main>
     <footer>
 
