fourth section added

--- a/index.html
+++ b/index.html
@@ -94,6 +94,26 @@
         </div>
     </div>
 </section>
+<section>
+    <div class="fourth-section-container">
+    <div class="fourth-section-image-container">
+        <div class="imgg-1">
+         <img src="./images/Rectangle 67.png" alt="">
+        </div>
+        <div class="imgg-2">
+         <img src="./images/Rectangle 78.png" alt="">
+        </div>
+    </div>
+    <div class="fourth-section-text">
+        <h3 class="fourth-text"><span class="liner">Play Games<br> 
+            Online</span> Anywhere,<br> 
+            Anytime!</h3>
+            <p>PC. dad s phone, moms tablet, or your Chromebook,<br> 
+                with Gamer you can play your favorite games online<br> 
+                for free, any time, anywhere , on any device.</p>
+    </div>
+    </div>
+</section>
     </main>
     <footer>
 
