--- a/index.html
+++ b/index.html
@@ -82,10 +82,14 @@
                 <p>Did you score? #unblockedgames<br> 
                     #school</p>
             </div>
-            <div class="online">
+            <div id="bonus" class="online">
                 <img src="./images/Rectangle 7.png" alt="">
                 <p>Breaking game records<br> 
                     like OG</p>
+                    <div class="overlayy">
+                        <img id="bbt" src="./images/play-button 1.png" alt="">
+                        <span class="txt">Watch Now</span>
+                    </div>
             </div>
             <div class="online">
                 <img src="./images/Rectangle 6.png" alt="">
