--- a/index.html
+++ b/index.html
@@ -76,13 +76,21 @@
                 <img src="./images/Rectangle 4.png" alt="">
                 <p>No Download. No Installs. Play<br> 
                     games Instantly on Gamer.</p>
+                    <div class="overlayy">
+                        <img id="bbt" src="./images/play-button 1.png" alt="">
+                        <span class="txt">Watch Now</span>
+                    </div>
             </div>
             <div class="online">
                 <img src="./images/Rectangle 5.png" alt="">
                 <p>Did you score? #unblockedgames<br> 
                     #school</p>
+                    <div class="overlayy">
+                        <img id="bbt" src="./images/play-button 1.png" alt="">
+                        <span class="txt">Watch Now</span>
+                    </div>
             </div>
-            <div id="bonus" class="online">
+            <div  class="online">
                 <img src="./images/Rectangle 7.png" alt="">
                 <p>Breaking game records<br> 
                     like OG</p>
@@ -95,6 +103,10 @@
                 <img src="./images/Rectangle 6.png" alt="">
                 <p>Busted gaming on school laptop,<br> 
                     but you are still lit</p>
+                    <div class="overlayy">
+                        <img id="bbt" src="./images/play-button 1.png" alt="">
+                        <span class="txt">Watch Now</span>
+                    </div>
             </div>
         </div>
     </div>
